--- a/karingon.html
+++ b/karingon.html
@@ -1,183 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Käringön | Handlar'n</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
-
     <main id="karingon_wrapper">
-
         <div class="mobile_nav">
-
             <ul class="nav_list">
-
                 <li class="nav_list_item">
-
                     <a class="nav_list_link" href="storeInfo.html">
                         <h2>Affären</h2>
                     </a>
-
                 </li>
 
-
                 <li class="nav_list_item">
-
                     <a class="nav_list_link" href="ombud.html">
                         <h2>Ombud</h2>
                     </a>
-
                 </li>
 
                 <li class="nav_list_item">
-
                     <a class="nav_list_link" href="karingon.html">
                         <h2>Käringön</h2>
                     </a>
-
                 </li>
-                
-                <li class="nav_list_item">
 
+                <li class="nav_list_item">
                     <a class="nav_list_link" href="news.html">
                         <h2>Erbjudanden</h2>
                     </a>
-
                 </li>
-
             </ul>
         </div>
 
         <header>
-
             <div id="header_logo_wrapper">
                 <a href="index.html" id="header_logo_link">
                     <img id="header_logo_img_full" src="img/logo/logotyp_full_white.png"
-                        alt="Logotyp, Handlar'n Käringön">
-                    <img id="header_logo_img_small" src="img/logo/logotyp_small.png" alt="Logotyp, Handlar'n Käringön">
+                        alt="Logotyp, Handlar'n Käringön" />
+                    <img id="header_logo_img_small" src="img/logo/logotyp_small.png"
+                        alt="Logotyp, Handlar'n Käringön" />
                 </a>
             </div>
 
             <div id="mobile_nav_btn_wrapper">
-                <img id="mobile_nav_btn_img" src="img/menu_icon4.png" alt="">
+                <img id="mobile_nav_btn_img" src="img/menu_icon4.png" alt="Mobil meny knapp" />
             </div>
 
             <nav id="index_nav">
-
                 <ul class="nav_list">
-
                     <li class="nav_list_item">
-
                         <a class="nav_list_link" href="storeInfo.html">
                             <h2>Affären</h2>
                         </a>
-
                     </li>
 
-
                     <li class="nav_list_item">
-
                         <a class="nav_list_link" href="ombud.html">
                             <h2>Ombud</h2>
                         </a>
-
                     </li>
 
                     <li class="nav_list_item">
-
                         <a class="nav_list_link" href="karingon.html">
                             <h2>Käringön</h2>
                         </a>
-
                     </li>
                     <li class="nav_list_item">
-
                         <a class="nav_list_link" href="news.html">
                             <h2>Erbjudanden</h2>
                         </a>
-
                     </li>
-
                 </ul>
-
             </nav>
-
         </header>
 
         <div id="karingon_title_container">
-             <h1>KÄRINGÖN</h1>
+            <h1>KÄRINGÖN</h1>
         </div>
-
 
         <div id="karingon_border"></div>
 
-
         <article class="k_img" id="k_img_about_island">
-            <img src="img/karingon_hamn.jpg" alt="">
+            <img src="img/karingon_hamn.jpg" alt="Hamnen på Käringön" />
         </article>
 
-        <article class=k_text_article id="k_about_island">
+        <article class="k_text_article" id="k_about_island">
             <h3>OM ÖN</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Praesentium mollitia rerum labore, officiis voluptatum voluptates omnis quasi excepturi earum quidem!
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+                mollitia rerum labore, officiis voluptatum voluptates omnis quasi
+                excepturi earum quidem!
             </p>
-
         </article>
 
         <article class="k_img" id="k_img_history">
-            <img src="img/island_historia.jpg" alt="">
+            <img src="img/island_historia.jpg" alt="Gammal svartvit bild på Käringön" />
         </article>
 
-
-        <article class=k_text_article id="k_history">
+        <article class="k_text_article" id="k_history">
             <h3>HISTORIA</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Praesentium mollitia rerum labore, officiis voluptatum voluptates omnis quasi excepturi earum quidem!
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+                mollitia rerum labore, officiis voluptatum voluptates omnis quasi
+                excepturi earum quidem!
             </p>
-
         </article>
-
 
         <article class="k_img" id="k_img_ssrs">
-            <img src="img/ssrs.jpg" alt="">
+            <img src="img/ssrs.jpg" alt="Bild på sjöräddningsbåtar i Käringöns hamn" />
         </article>
 
-
-        <article class=k_text_article id="k_ssrs">
+        <article class="k_text_article" id="k_ssrs">
             <h3>SSRS</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Praesentium mollitia rerum labore, officiis voluptatum voluptates omnis quasi excepturi earum quidem!
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+                mollitia rerum labore, officiis voluptatum voluptates omnis quasi
+                excepturi earum quidem!
             </p>
-
         </article>
-
-
 
         <footer>
-
             <div class="footer_logo_container">
-                <img class="footer_logo" src="img/logo/logotyp_small.png" alt="">
-
+                <img class="footer_logo" src="img/logo/logotyp_small.png" alt="Logotyp, Handlar'n" />
             </div>
 
             <div class="footer_fbLogo_container">
-
                 <a target="_blank" href="https://www.facebook.com/Handlarn-K%C3%A4ring%C3%B6n-1629274747328623/">
-                    <img class="footer_fbLogo" src="img/facebook_logo.png" alt="">
-
+                    <img class="footer_fbLogo" src="img/facebook_logo.png" alt="Facebook logotyp" />
                 </a>
-
             </div>
-
-
         </footer>
     </main>
 
-
-
     <script src="js/main.js"></script>
 </body>
+
 </html>
