--- a/storeInfo.html
+++ b/storeInfo.html
@@ -11,7 +11,6 @@
 
 <body id="store_body">
 
-
     <main id="storeInfoWrapper">
 
         <div class="mobile_nav">
@@ -25,7 +24,6 @@
                     </a>
 
                 </li>
-
 
                 <li class="nav_list_item">
 
@@ -64,7 +62,7 @@
             </div>
 
             <div id="mobile_nav_btn_wrapper">
-                <img id="mobile_nav_btn_img" src="img/menu_icon4.png" alt="">
+                <img id="mobile_nav_btn_img" src="img/menu_icon4.png" alt="Mobil meny knapp">
             </div>
 
             <nav id="index_nav">
@@ -78,7 +76,6 @@
                         </a>
 
                     </li>
-
 
                     <li class="nav_list_item">
 
@@ -111,14 +108,11 @@
 
         <div id="hours_red_border"></div>
 
-
         <section id="hours">
-
 
             <div class="section_title_container" id="hours_title_container">
                 <h2 class="section_title" id="hours_title"> ÖPPETTIDER</h2>
             </div>
-
 
             <article class="hours_content" id="hours_season">
 
@@ -140,7 +134,6 @@
 
                     </div>
 
-
                     <div class="weekend">
                         <div class="days">
                             <h4>Lör-Sön</h4>
@@ -154,7 +147,6 @@
 
                 </div>
             </article>
-
 
             <article class="hours_content" id="hours__off_season">
 
@@ -189,12 +181,7 @@
                 </div>
             </article>
 
-
-
-
         </section>
-
-
 
         <section id="hitta_hit">
 
@@ -202,80 +189,36 @@
             <div class="map_desktop">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d109420.03007902935!2d11.29483234368535!3d58.107750479926985!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x40188537fc4e1590!2sHandlar&#39;n!5e0!3m2!1ssv!2sse!4v1615387962028!5m2!1ssv!2sse"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    width="700" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div class="map_mobile">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d109420.03007902935!2d11.29483234368535!3d58.107750479926985!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x40188537fc4e1590!2sHandlar&#39;n!5e0!3m2!1ssv!2sse!4v1615390358418!5m2!1ssv!2sse"
                     width="300" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
-
             </div>
 
-
-
-
-
-
-
-
-
-
         </section>
-
-
 
         <footer>
 
             <div class="footer_logo_container">
-                <img class="footer_logo" src="img/logo/logotyp_small.png" alt="">
+                <img class="footer_logo" src="img/logo/logotyp_small.png" alt="Logotyp, Handlar'n">
 
             </div>
 
             <div class="footer_fbLogo_container">
 
                 <a target="_blank" href="https://www.facebook.com/Handlarn-K%C3%A4ring%C3%B6n-1629274747328623/">
-                    <img class="footer_fbLogo" src="img/facebook_logo.png" alt="">
+                    <img class="footer_fbLogo" src="img/facebook_logo.png" alt="Facebook logotyp">
 
                 </a>
 
             </div>
 
-
         </footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <script src="js/main.js"></script>
 </body>
