--- a/ombud.html
+++ b/ombud.html
@@ -2,178 +2,132 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ombud | Handlar'n</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
     <main id="ombud_wrapper">
-
-
-
-
-
         <div class="mobile_nav">
-
             <ul class="nav_list">
-
                 <li class="nav_list_item">
-
                     <a class="nav_list_link" href="storeInfo.html">
                         <h2>Affären</h2>
                     </a>
-
                 </li>
 
-
                 <li class="nav_list_item">
-
                     <a class="nav_list_link" href="ombud.html">
                         <h2>Ombud</h2>
                     </a>
-
                 </li>
 
                 <li class="nav_list_item">
-
                     <a class="nav_list_link" href="karingon.html">
                         <h2>Käringön</h2>
                     </a>
-
                 </li>
                 <li class="nav_list_item">
-
                     <a class="nav_list_link" href="news.html">
                         <h2>Erbjudanden</h2>
                     </a>
-
                 </li>
             </ul>
         </div>
 
         <header>
-
             <div id="header_logo_wrapper">
                 <a href="index.html" id="header_logo_link">
                     <img id="header_logo_img_full" src="img/logo/logotyp_full_white.png"
-                        alt="Logotyp, Handlar'n Käringön">
-                    <img id="header_logo_img_small" src="img/logo/logotyp_small.png" alt="Logotyp, Handlar'n Käringön">
+                        alt="Logotyp, Handlar'n Käringön" />
+                    <img id="header_logo_img_small" src="img/logo/logotyp_small.png"
+                        alt="Logotyp, Handlar'n Käringön" />
                 </a>
             </div>
 
             <div id="mobile_nav_btn_wrapper">
-                <img id="mobile_nav_btn_img" src="img/menu_icon4.png" alt="">
+                <img id="mobile_nav_btn_img" src="img/menu_icon4.png" alt="Mobil meny knapp" />
             </div>
 
             <nav id="index_nav">
-
                 <ul class="nav_list">
-
                     <li class="nav_list_item">
-
                         <a class="nav_list_link" href="storeInfo.html">
                             <h2>Affären</h2>
                         </a>
-
                     </li>
 
-
                     <li class="nav_list_item">
-
                         <a class="nav_list_link" href="ombud.html">
                             <h2>Ombud</h2>
                         </a>
-
                     </li>
 
                     <li class="nav_list_item">
-
                         <a class="nav_list_link" href="karingon.html">
                             <h2>Käringön</h2>
                         </a>
-
                     </li>
 
                     <li class="nav_list_item">
-
                         <a class="nav_list_link" href="news.html">
                             <h2>Erbjudanden</h2>
                         </a>
-
                     </li>
-
-
                 </ul>
-
             </nav>
-
         </header>
 
         <section id="ombud_content">
             <div id="ombud_content_background"></div>
 
-
             <h2 id="ombud_title">OMBUD</h2>
-            <p>Handlarn Käringön är utlämningsställe för Systembolaget,
-                och ombud för både Apoteket och Posten.
+            <p>
+                Handlarn Käringön är utlämningsställe för Systembolaget, och ombud för
+                både Apoteket och Posten.
             </p>
-
-
-
         </section>
 
         <aside id="ombud_logos">
             <div id="ombud_logos_background"></div>
             <ul id="logos_list">
-
                 <li class="logo_list_item">
                     <a target="_blank" class="logo_list_a" href="https://www.postnord.se/">
-                        <img class="logo_list_img" id="postnord_logo" src="img/postnordlogo.webp" alt="">
+                        <img class="logo_list_img" id="postnord_logo" src="img/postnordlogo.webp"
+                            alt="Logotyp, Postnord" />
                     </a>
                 </li>
 
                 <li class="logo_list_item">
                     <a target="_blank" class="logo_list_a" href="https://www.systembolaget.se/">
-                        <img class="logo_list_img" id="system_logo" src="img/systembolagetlogo.png" alt="">
+                        <img class="logo_list_img" id="system_logo" src="img/systembolagetlogo.png"
+                            alt="Logotyp, Systembolaget" />
                     </a>
                 </li>
 
                 <li class="logo_list_item">
                     <a target="_blank" class="logo_list_a" href="https://www.apoteket.se/">
-                        <img class="logo_list_img" src="img/apoteketlogo2.png" alt="">
+                        <img class="logo_list_img" id="apotek_logo" src="img/apoteketlogo2.png"
+                            alt="Logotyp, Apoteket" />
                     </a>
                 </li>
-
-
             </ul>
-
-
         </aside>
 
         <footer>
-
             <div class="footer_logo_container">
-                <img class="footer_logo" src="img/logo/logotyp_small.png" alt="">
-
+                <img class="footer_logo" src="img/logo/logotyp_small.png" alt="Logotyp, Handlar'n" />
             </div>
 
             <div class="footer_fbLogo_container">
-
                 <a target="_blank" href="https://www.facebook.com/Handlarn-K%C3%A4ring%C3%B6n-1629274747328623/">
-                    <img class="footer_fbLogo" src="img/facebook_logo.png" alt="">
-
+                    <img class="footer_fbLogo" src="img/facebook_logo.png" alt="Facebook logotyp" />
                 </a>
-
             </div>
-
-
         </footer>
-
-
-
     </main>
     <script src="js/main.js"></script>
 </body>
